@@ -54,6 +54,7 @@ import org.prebid.server.exception.PreBidException;
 import org.prebid.server.execution.Timeout;
 import org.prebid.server.hooks.execution.HookStageExecutor;
 import org.prebid.server.hooks.execution.model.HookStageExecutionResult;
+import org.prebid.server.hooks.v1.bidder.AllProcessedBidResponsesPayload;
 import org.prebid.server.hooks.v1.bidder.BidderResponsePayload;
 import org.prebid.server.identity.IdGenerator;
 import org.prebid.server.identity.IdGeneratorType;
@@ -105,6 +106,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -186,26 +188,26 @@ public class BidResponseCreator {
         final List<BidderResponse> bidderResponses = auctionParticipations.stream()
                 .filter(auctionParticipation -> !auctionParticipation.isRequestBlocked())
                 .map(AuctionParticipation::getBidderResponse)
-                .collect(Collectors.toList());
+                .toList();
 
-        return videoStoredDataResult(auctionContext)
-                .compose(videoStoredDataResult -> {
-                    final List<BidderResponse> modifiedBidderResponses =
-                            updateBids(bidderResponses, videoStoredDataResult, auctionContext, eventsContext, imps);
+        return videoStoredDataResult(auctionContext).compose(videoStoredDataResult ->
+                invokeProcessedBidderResponseHooks(
+                        updateBids(bidderResponses, videoStoredDataResult, auctionContext, eventsContext, imps),
+                        auctionContext)
 
-                    return invokeProcessedBidderResponseHooks(modifiedBidderResponses, auctionContext)
+                        .compose(updatedResponses ->
+                                invokeAllProcessedBidResponsesHook(updatedResponses, auctionContext))
 
-                            .compose(updatedByHooksBidderResponses ->
-                                    createCategoryMapping(auctionContext, updatedByHooksBidderResponses))
+                        .compose(updatedResponses ->
+                                createCategoryMapping(auctionContext, updatedResponses))
 
-                            .compose(categoryMappingResult -> cacheBidsAndCreateResponse(
-                                    toBidderResponseInfos(categoryMappingResult, imps),
-                                    auctionContext,
-                                    cacheInfo,
-                                    bidderToMultiBids,
-                                    videoStoredDataResult,
-                                    eventsContext));
-                });
+                        .compose(categoryMappingResult -> cacheBidsAndCreateResponse(
+                                toBidderResponseInfos(categoryMappingResult, imps),
+                                auctionContext,
+                                cacheInfo,
+                                bidderToMultiBids,
+                                videoStoredDataResult,
+                                eventsContext)));
     }
 
     private List<BidderResponse> updateBids(List<BidderResponse> bidderResponses,
@@ -347,12 +349,11 @@ public class BidResponseCreator {
 
         final Video storedVideo = videoStoredDataResult.getImpIdToStoredVideo().get(bid.getImpid());
         final Events events = createEvents(bidder, account, effectiveBidId, eventsContext, lineItemId);
-        final ExtBidPrebidVideo extBidPrebidVideo = getExtBidPrebidVideo(bid.getExt());
+        final ExtBidPrebidVideo extBidPrebidVideo = getExtBidPrebidVideo(bid.getExt()).orElse(null);
 
-        final ExtBidPrebid extBidPrebid = getExtPrebid(bid.getExt());
-        final ExtBidPrebid.ExtBidPrebidBuilder extBidPrebidBuilder = extBidPrebid != null
-                ? extBidPrebid.toBuilder()
-                : ExtBidPrebid.builder();
+        final ExtBidPrebid.ExtBidPrebidBuilder extBidPrebidBuilder = getExtPrebid(bid.getExt(), ExtBidPrebid.class)
+                .map(ExtBidPrebid::toBuilder)
+                .orElseGet(ExtBidPrebid::builder);
 
         return extBidPrebidBuilder
                 .bidid(generatedBidId)
@@ -431,7 +432,7 @@ public class BidResponseCreator {
                 .findFirst()
                 // Should never occur. See ResponseBidValidator
                 .orElseThrow(
-                        () -> new PreBidException(String.format("Bid with impId %s doesn't have matched imp", impId)));
+                        () -> new PreBidException("Bid with impId %s doesn't have matched imp".formatted(impId)));
     }
 
     private Future<List<BidderResponse>> invokeProcessedBidderResponseHooks(List<BidderResponse> bidderResponses,
@@ -441,8 +442,16 @@ public class BidResponseCreator {
                         .map(bidderResponse -> hookStageExecutor
                                 .executeProcessedBidderResponseStage(bidderResponse, auctionContext)
                                 .map(stageResult -> rejectBidderResponseOrProceed(stageResult, bidderResponse)))
-                        .collect(Collectors.toList()))
+                        .collect(Collectors.toCollection(ArrayList::new)))
                 .map(CompositeFuture::list);
+    }
+
+    private Future<List<BidderResponse>> invokeAllProcessedBidResponsesHook(List<BidderResponse> bidderResponses,
+                                                                            AuctionContext auctionContext) {
+
+        return hookStageExecutor.executeAllProcessedBidResponsesStage(bidderResponses, auctionContext)
+                .map(HookStageExecutionResult::getPayload)
+                .map(AllProcessedBidResponsesPayload::bidResponses);
     }
 
     private static BidderResponse rejectBidderResponseOrProceed(
@@ -511,9 +520,8 @@ public class BidResponseCreator {
         final ExtRequestTargeting targeting = targeting(bidRequest);
         final TxnLog txnLog = auctionContext.getTxnLog();
 
-        final List<BidderResponseInfo> bidderResponseInfos =
-                toBidderResponseWithTargetingBidInfos(bidderResponses, bidderToMultiBids, preferDeals(targeting),
-                        txnLog);
+        final List<BidderResponseInfo> bidderResponseInfos = toBidderResponseWithTargetingBidInfos(
+                bidderResponses, bidderToMultiBids, preferDeals(targeting), txnLog);
 
         final Set<BidInfo> bidInfos = bidderResponseInfos.stream()
                 .map(BidderResponseInfo::getSeatBid)
@@ -600,7 +608,7 @@ public class BidResponseCreator {
                         bidderToMultiBids,
                         winningBids,
                         winningBidsByBidder))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<BidInfo> toSortedMultiBidInfo(BidderResponseInfo bidderResponse,
@@ -617,14 +625,14 @@ public class BidResponseCreator {
         return impIdToBidInfos.values().stream()
                 .map(infos -> sortReducedBidInfo(infos, bidLimit, preferDeals))
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<BidInfo> sortReducedBidInfo(List<BidInfo> bidInfos, int limit, boolean preferDeals) {
         return bidInfos.stream()
                 .sorted(winningBidComparatorFactory.create(preferDeals).reversed())
                 .limit(limit)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Set<String> toLineItemIds(Collection<List<BidInfo>> bidInfos) {
@@ -681,7 +689,7 @@ public class BidResponseCreator {
         return impIdToBidInfos.values().stream()
                 .map(bidInfos -> injectTargeting(bidInfos, bidder, bidderToMultiBids, winningBids, winningBidsByBidder))
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<BidInfo> injectTargeting(List<BidInfo> bidderImpIdBidInfos,
@@ -701,7 +709,7 @@ public class BidResponseCreator {
             final boolean isFirstBid = i == 0;
             final String targetingBidderCode = isFirstBid
                     ? bidder
-                    : bidderCodePrefix == null ? null : String.format("%s%s", bidderCodePrefix, i + 1);
+                    : bidderCodePrefix == null ? null : bidderCodePrefix + (i + 1);
 
             final BidInfo bidInfo = bidderImpIdBidInfos.get(i);
             final TargetingInfo targetingInfo = TargetingInfo.builder()
@@ -750,6 +758,7 @@ public class BidResponseCreator {
         final Map<String, List<ExtBidderError>> warnings = toExtBidderWarnings(bidderResponseInfos, auctionContext);
 
         final Map<String, Integer> responseTimeMillis = toResponseTimes(bidderResponseInfos, cacheResult);
+        final ExtBidResponsePrebid prebid = toExtBidResponsePrebid(auctionTimestamp, auctionContext.getBidRequest());
 
         return ExtBidResponse.builder()
                 .debug(extResponseDebug)
@@ -757,8 +766,18 @@ public class BidResponseCreator {
                 .warnings(warnings)
                 .responsetimemillis(responseTimeMillis)
                 .tmaxrequest(auctionContext.getBidRequest().getTmax())
-                .prebid(ExtBidResponsePrebid.of(auctionTimestamp, null))
+                .prebid(prebid)
                 .build();
+    }
+
+    private static ExtBidResponsePrebid toExtBidResponsePrebid(long auctionTimestamp, BidRequest bidRequest) {
+        final JsonNode passThrough = Optional.ofNullable(bidRequest)
+                .map(BidRequest::getExt)
+                .map(ExtRequest::getPrebid)
+                .map(ExtRequestPrebid::getPassthrough)
+                .orElse(null);
+
+        return ExtBidResponsePrebid.of(auctionTimestamp, null, passThrough, null);
     }
 
     private static ExtResponseDebug toExtResponseDebug(List<BidderResponseInfo> bidderResponseInfos,
@@ -798,7 +817,7 @@ public class BidResponseCreator {
         // do not submit non deals bids with zero price to prebid cache
         final List<BidInfo> bidsValidToBeCached = bidsToCache.stream()
                 .filter(BidResponseCreator::isValidForCaching)
-                .collect(Collectors.toList());
+                .toList();
 
         final CacheContext cacheContext = CacheContext.builder()
                 .cacheBidsTtl(cacheInfo.getCacheBidsTtl())
@@ -864,7 +883,7 @@ public class BidResponseCreator {
         final Map<String, List<ExtHttpCall>> contextExtHttpCalls = contextHttpCalls.entrySet().stream()
                 .collect(Collectors.toMap(Map.Entry::getKey, serviceToHttpCall -> serviceToHttpCall.getValue().stream()
                         .map(BidResponseCreator::toExtHttpCall)
-                        .collect(Collectors.toList())));
+                        .toList()));
 
         final Map<String, List<ExtHttpCall>> httpCalls = new HashMap<>();
         httpCalls.putAll(bidderHttpCalls);
@@ -906,7 +925,7 @@ public class BidResponseCreator {
 
         final List<ExtTraceDeal> dealsTrace = entries.stream()
                 .filter(extTraceDeal -> StringUtils.isEmpty(extTraceDeal.getLineItemId()))
-                .collect(Collectors.toList());
+                .toList();
         final Map<String, List<ExtTraceDeal>> lineItemsTrace = entries.stream()
                 .filter(extTraceDeal -> StringUtils.isNotEmpty(extTraceDeal.getLineItemId()))
                 .collect(Collectors.groupingBy(ExtTraceDeal::getLineItemId, Collectors.toList()));
@@ -966,7 +985,7 @@ public class BidResponseCreator {
     private static List<ExtBidderError> errorsDetails(List<BidderError> errors) {
         return errors.stream()
                 .map(bidderError -> ExtBidderError.of(bidderError.getType().getCode(), bidderError.getMessage()))
-                .collect(Collectors.toList());
+                .collect(Collectors.toCollection(ArrayList::new));
     }
 
     /**
@@ -995,8 +1014,8 @@ public class BidResponseCreator {
             return Collections.emptyMap();
         }
 
-        final List<ExtBidderError> collectedErrors = Stream.concat(contextErrors.stream(), storedErrors.stream())
-                .collect(Collectors.toList());
+        final List<ExtBidderError> collectedErrors =
+                Stream.concat(contextErrors.stream(), storedErrors.stream()).toList();
         return Collections.singletonMap(PREBID_EXT, collectedErrors);
     }
 
@@ -1008,7 +1027,7 @@ public class BidResponseCreator {
         if (CollectionUtils.isNotEmpty(errors)) {
             return errors.stream()
                     .map(message -> ExtBidderError.of(BidderError.Type.generic.getCode(), message))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return Collections.emptyList();
     }
@@ -1019,7 +1038,7 @@ public class BidResponseCreator {
     private static List<ExtBidderError> extractContextErrors(AuctionContext auctionContext) {
         return auctionContext.getPrebidErrors().stream()
                 .map(message -> ExtBidderError.of(BidderError.Type.generic.getCode(), message))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -1064,7 +1083,7 @@ public class BidResponseCreator {
     private static Map<String, List<ExtBidderError>> extractContextWarnings(AuctionContext auctionContext) {
         final List<ExtBidderError> contextWarnings = auctionContext.getDebugWarnings().stream()
                 .map(message -> ExtBidderError.of(BidderError.Type.generic.getCode(), message))
-                .collect(Collectors.toList());
+                .toList();
 
         return contextWarnings.isEmpty()
                 ? Collections.emptyMap()
@@ -1115,7 +1134,7 @@ public class BidResponseCreator {
                         cacheResult.getCacheBids(),
                         account,
                         bidErrors))
-                .collect(Collectors.toList());
+                .toList();
 
         final Long auctionTimestamp = eventsContext.getAuctionTimestamp();
         final ExtBidResponse extBidResponse = toExtBidResponse(
@@ -1174,8 +1193,8 @@ public class BidResponseCreator {
                 final Boolean echoVideoAttrs = options != null ? options.getEchoVideoAttrs() : null;
                 return BooleanUtils.toBoolean(echoVideoAttrs);
             } catch (JsonProcessingException e) {
-                throw new InvalidRequestException(String.format(
-                        "Incorrect Imp extension format for Imp with id %s: %s", imp.getId(), e.getMessage()));
+                throw new InvalidRequestException(
+                        "Incorrect Imp extension format for Imp with id " + imp.getId() + ": " + e.getMessage());
             }
         }
         return false;
@@ -1212,7 +1231,7 @@ public class BidResponseCreator {
                         bidRequest,
                         account))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         return SeatBid.builder()
                 .seat(bidder)
@@ -1275,13 +1294,15 @@ public class BidResponseCreator {
         final Map<String, String> targetingKeywords;
         final String bidderCode = targetingInfo.getBidderCode();
         if (targeting != null && targetingInfo.isTargetingEnabled() && targetingInfo.isBidderWinningBid()) {
-            final TargetingKeywordsCreator keywordsCreator = resolveKeywordsCreator(bidType, targeting, isApp,
-                    bidRequest, account);
+            final TargetingKeywordsCreator keywordsCreator = resolveKeywordsCreator(
+                    bidType, targeting, isApp, bidRequest, account);
 
             final boolean isWinningBid = targetingInfo.isWinningBid();
             final String categoryDuration = bidInfo.getCategory();
-            targetingKeywords = keywordsCreator != null ? keywordsCreator.makeFor(bid, bidderCode, isWinningBid,
-                            cacheId, bidType.getName(), videoCacheId, categoryDuration) : null;
+            targetingKeywords = keywordsCreator != null
+                    ? keywordsCreator.makeFor(
+                    bid, bidderCode, isWinningBid, cacheId, bidType.getName(), videoCacheId, categoryDuration)
+                    : null;
         } else {
             targetingKeywords = null;
         }
@@ -1291,18 +1312,18 @@ public class BidResponseCreator {
         final ExtResponseCache cache = bids != null || vastXml != null ? ExtResponseCache.of(bids, vastXml) : null;
 
         final ObjectNode originalBidExt = bid.getExt();
-        final ExtBidPrebid extBidPrebid = getExtPrebid(originalBidExt);
-        final ExtBidPrebid.ExtBidPrebidBuilder extBidPrebidBuilder = extBidPrebid != null
-                ? extBidPrebid.toBuilder()
-                : ExtBidPrebid.builder();
         final Boolean dealsTierSatisfied = bidInfo.getSatisfiedPriority();
 
-        final ExtBidPrebid updatedExtBidPrebid = extBidPrebidBuilder
-                .targeting(MapUtils.isEmpty(targetingKeywords) ? null : targetingKeywords)
-                .targetBidderCode(targetingInfo.isAddTargetBidderCode() ? bidderCode : null)
-                .dealtiersatisfied(dealsTierSatisfied)
-                .cache(cache)
-                .build();
+        final ExtBidPrebid updatedExtBidPrebid =
+                getExtPrebid(originalBidExt, ExtBidPrebid.class)
+                        .map(ExtBidPrebid::toBuilder)
+                        .orElseGet(ExtBidPrebid::builder)
+                        .targeting(MapUtils.isNotEmpty(targetingKeywords) ? targetingKeywords : null)
+                        .targetBidderCode(targetingInfo.isAddTargetBidderCode() ? bidderCode : null)
+                        .dealTierSatisfied(dealsTierSatisfied)
+                        .cache(cache)
+                        .passThrough(extractPassThrough(bidInfo.getCorrespondingImp()))
+                        .build();
 
         final ObjectNode updatedBidExt =
                 originalBidExt != null ? originalBidExt.deepCopy() : mapper.mapper().createObjectNode();
@@ -1314,6 +1335,13 @@ public class BidResponseCreator {
                 .ext(updatedBidExt)
                 .exp(ttl)
                 .build();
+    }
+
+    private JsonNode extractPassThrough(Imp imp) {
+        return Optional.ofNullable(imp.getExt())
+                .flatMap(ext -> getExtPrebid(ext, ExtImpPrebid.class))
+                .map(ExtImpPrebid::getPassthrough)
+                .orElse(null);
     }
 
     private String createNativeMarkup(String bidAdm, Imp correspondingImp) {
@@ -1353,8 +1381,9 @@ public class BidResponseCreator {
                 responseAsset.getImg().setType(type);
             } else {
                 final Integer assetId = responseAsset.getId();
-                throw new PreBidException(String.format("Response has an Image asset with ID:'%s' present that doesn't "
-                        + "exist in the request", assetId != null ? assetId : StringUtils.EMPTY));
+                throw new PreBidException(
+                        "Response has an Image asset with ID:'%s' present that doesn't exist in the request"
+                                .formatted(assetId != null ? assetId : StringUtils.EMPTY));
             }
         }
         if (responseAsset.getData() != null) {
@@ -1363,8 +1392,9 @@ public class BidResponseCreator {
             if (type != null) {
                 responseAsset.getData().setType(type);
             } else {
-                throw new PreBidException(String.format("Response has a Data asset with ID:%s present that doesn't "
-                        + "exist in the request", responseAsset.getId()));
+                throw new PreBidException(
+                        "Response has a Data asset with ID:%s present that doesn't exist in the request"
+                                .formatted(responseAsset.getId()));
             }
         }
     }
@@ -1554,8 +1584,9 @@ public class BidResponseCreator {
 
         return TargetingKeywordsCreator.create(
                 parsePriceGranularity(priceGranularity),
-                targeting.getIncludewinners(),
-                targeting.getIncludebidderkeys(),
+                BooleanUtils.toBoolean(targeting.getIncludewinners()),
+                BooleanUtils.toBoolean(targeting.getIncludebidderkeys()),
+                BooleanUtils.toBoolean(targeting.getAlwaysincludedeals()),
                 BooleanUtils.isTrue(targeting.getIncludeformat()),
                 isApp,
                 resolveTruncateAttrChars(targeting, account),
@@ -1595,8 +1626,8 @@ public class BidResponseCreator {
         try {
             return mapper.mapper().treeToValue(priceGranularity, ExtPriceGranularity.class);
         } catch (JsonProcessingException e) {
-            throw new PreBidException(String.format("Error decoding bidRequest.prebid.targeting.pricegranularity: %s",
-                    e.getMessage()), e);
+            throw new PreBidException(
+                    "Error decoding bidRequest.prebid.targeting.pricegranularity: " + e.getMessage(), e);
         }
     }
 
@@ -1624,15 +1655,18 @@ public class BidResponseCreator {
     /**
      * Creates {@link ExtBidPrebidVideo} from bid extension.
      */
-    private ExtBidPrebidVideo getExtBidPrebidVideo(ObjectNode bidExt) {
-        final ExtBidPrebid extBidPrebid = getExtPrebid(bidExt);
-
-        return extBidPrebid != null ? extBidPrebid.getVideo() : null;
+    private Optional<ExtBidPrebidVideo> getExtBidPrebidVideo(ObjectNode bidExt) {
+        return getExtPrebid(bidExt, ExtBidPrebid.class)
+                .map(ExtBidPrebid::getVideo);
     }
 
-    private ExtBidPrebid getExtPrebid(ObjectNode bidExt) {
-        return bidExt != null && bidExt.hasNonNull(PREBID_EXT)
-                ? mapper.mapper().convertValue(bidExt.get(PREBID_EXT), ExtBidPrebid.class)
-                : null;
+    private <T> Optional<T> getExtPrebid(ObjectNode extNode, Class<T> extClass) {
+        try {
+            return Optional.ofNullable(extNode)
+                    .filter(ext -> ext.hasNonNull(PREBID_EXT))
+                    .map(ext -> mapper.mapper().convertValue(extNode.get(PREBID_EXT), extClass));
+        } catch (IllegalArgumentException e) {
+            return Optional.empty();
+        }
     }
 }
