@@ -41,16 +41,15 @@ public class BidderCatalog {
 
     private void validateBidderName(String bidderName) {
         if (bidderDepsMap.containsKey(bidderName)) {
-            throw new IllegalArgumentException(String.format(
-                    "Duplicate bidder or alias '%s'. Please check the configuration", bidderName));
+            throw new IllegalArgumentException(
+                    "Duplicate bidder or alias '%s'. Please check the configuration".formatted(bidderName));
         }
     }
 
     private Map<String, String> createErrorsForDeprecatedNames(BidderInstanceDeps deps) {
         return deps.getDeprecatedNames().stream().collect(Collectors.toMap(
                 Function.identity(),
-                deprecatedName -> String.format(
-                        ERROR_MESSAGE_TEMPLATE_FOR_DEPRECATED, deprecatedName, deps.getName())));
+                deprecatedName -> ERROR_MESSAGE_TEMPLATE_FOR_DEPRECATED.formatted(deprecatedName, deps.getName())));
     }
 
     private void processVendorId(BidderInstanceDeps coreDeps, String bidderName) {
