@@ -14,9 +14,10 @@ import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.auction.ExchangeService;
 import org.prebid.server.auction.model.BidderRequest;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
+import org.prebid.server.bidder.model.BidderCallType;
 import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderSeatBid;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
@@ -38,7 +39,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 import java.util.stream.Stream;
 import java.util.zip.GZIPOutputStream;
 
@@ -87,21 +88,23 @@ public class HttpBidderRequester {
 
         final Result<List<HttpRequest<T>>> httpRequestsWithErrors = bidder.makeHttpRequests(bidRequest);
         final List<BidderError> bidderErrors = httpRequestsWithErrors.getErrors();
-        final List<HttpRequest<T>> httpRequests =
-                enrichRequests(httpRequestsWithErrors.getValue(), requestHeaders, bidRequest);
+
+        final String bidderName = bidderRequest.getBidder();
+        final List<HttpRequest<T>> httpRequests = enrichRequests(
+                bidderName, httpRequestsWithErrors.getValue(), requestHeaders, bidRequest);
 
         if (CollectionUtils.isEmpty(httpRequests)) {
             return emptyBidderSeatBidWithErrors(bidderErrors);
         }
 
         final String storedResponse = bidderRequest.getStoredResponse();
-        final String bidderName = bidderRequest.getBidder();
 
         // stored response available only for single request interaction for the moment.
-        final Stream<Future<HttpCall<T>>> httpCalls = isStoredResponse(httpRequests, storedResponse, bidderName)
+        final Stream<Future<BidderCall<T>>> httpCalls = isStoredResponse(httpRequests, storedResponse, bidderName)
                 ? Stream.of(makeStoredHttpCall(httpRequests.get(0), storedResponse))
                 : httpRequests.stream().map(httpRequest -> doRequest(httpRequest, timeout));
 
+        // httpCalls contains recovered and mapped to succeeded Future<BidderHttpCall> with error inside
         final BidderRequestCompletionTracker completionTracker = completionTrackerFactory.create(bidRequest);
         final ResultBuilder<T> resultBuilder =
                 new ResultBuilder<>(httpRequests, bidderErrors, completionTracker, mapper);
@@ -110,7 +113,7 @@ public class HttpBidderRequester {
                 .map(httpCallFuture -> httpCallFuture
                         .map(httpCall -> bidderErrorNotifier.processTimeout(httpCall, bidder))
                         .map(httpCall -> processHttpCall(bidder, bidRequest, resultBuilder, httpCall)))
-                .collect(Collectors.toList());
+                .toList();
 
         return CompositeFuture.any(
                         CompositeFuture.join(new ArrayList<>(httpRequestFutures)),
@@ -118,15 +121,16 @@ public class HttpBidderRequester {
                 .map(ignored -> resultBuilder.toBidderSeatBid(debugEnabled));
     }
 
-    private <T> List<HttpRequest<T>> enrichRequests(List<HttpRequest<T>> httpRequests,
+    private <T> List<HttpRequest<T>> enrichRequests(String bidderName,
+                                                    List<HttpRequest<T>> httpRequests,
                                                     CaseInsensitiveMultiMap requestHeaders,
                                                     BidRequest bidRequest) {
 
         return httpRequests.stream().map(httpRequest -> httpRequest.toBuilder()
                         .headers(requestEnricher.enrichHeaders(
-                                httpRequest.getHeaders(), requestHeaders, bidRequest))
+                                bidderName, httpRequest.getHeaders(), requestHeaders, bidRequest))
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private <T> boolean isStoredResponse(List<HttpRequest<T>> httpRequests, String storedResponse, String bidder) {
@@ -135,18 +139,19 @@ public class HttpBidderRequester {
         }
 
         if (httpRequests.size() > 1) {
-            logger.warn("More than one request was created for stored response, when only single stored response "
-                    + "per bidder is supported for the moment. Request to real {0} bidder "
-                    + "will be performed .", bidder);
+            logger.warn("""
+                            More than one request was created for stored response, when only single stored response \
+                            per bidder is supported for the moment. Request to real {0} bidder will be performed.""",
+                    bidder);
             return false;
         }
 
         return true;
     }
 
-    private <T> Future<HttpCall<T>> makeStoredHttpCall(HttpRequest<T> httpRequest, String storedResponse) {
+    private <T> Future<BidderCall<T>> makeStoredHttpCall(HttpRequest<T> httpRequest, String storedResponse) {
         final HttpResponse httpResponse = HttpResponse.of(HttpResponseStatus.OK.code(), null, storedResponse);
-        return Future.succeededFuture(HttpCall.success(httpRequest, httpResponse, null));
+        return Future.succeededFuture(BidderCall.storedHttp(httpRequest, httpResponse));
     }
 
     /**
@@ -159,13 +164,15 @@ public class HttpBidderRequester {
                 ? Collections.singletonList(BidderError.failedToRequestBids(
                 "The bidder failed to generate any bid requests, but also failed to generate an error"))
                 : bidderErrors;
-        return Future.succeededFuture(BidderSeatBid.of(Collections.emptyList(), Collections.emptyList(), errors));
+
+        return Future.succeededFuture(BidderSeatBid.of(
+                Collections.emptyList(), Collections.emptyList(), errors, Collections.emptyList()));
     }
 
     /**
      * Makes an HTTP request and returns {@link Future} that will be eventually completed with success or error result.
      */
-    private <T> Future<HttpCall<T>> doRequest(HttpRequest<T> httpRequest, Timeout timeout) {
+    private <T> Future<BidderCall<T>> doRequest(HttpRequest<T> httpRequest, Timeout timeout) {
         final long remainingTimeout = timeout.remaining();
         if (remainingTimeout <= 0) {
             return failResponse(new TimeoutException("Timeout has been exceeded"), httpRequest);
@@ -180,7 +187,8 @@ public class HttpBidderRequester {
         final MultiMap requestHeaders = httpRequest.getHeaders();
         final byte[] preparedBody = compressIfRequired(httpRequest.getBody(), requestHeaders);
 
-        return httpClient.request(httpRequest.getMethod(),
+        return httpClient.request(
+                httpRequest.getMethod(),
                 httpRequest.getUri(),
                 requestHeaders,
                 preparedBody,
@@ -195,21 +203,23 @@ public class HttpBidderRequester {
     }
 
     private static byte[] gzip(byte[] value) {
-        try (ByteArrayOutputStream obj = new ByteArrayOutputStream(); GZIPOutputStream gzip = new GZIPOutputStream(
-                obj)) {
+        try (
+                ByteArrayOutputStream obj = new ByteArrayOutputStream();
+                GZIPOutputStream gzip = new GZIPOutputStream(obj)) {
+
             gzip.write(value);
             gzip.finish();
 
             return obj.toByteArray();
         } catch (IOException e) {
-            throw new PreBidException(String.format("Failed to compress request : %s", e.getMessage()));
+            throw new PreBidException("Failed to compress request : " + e.getMessage());
         }
     }
 
     /**
-     * Produces {@link Future} with {@link HttpCall} containing request and error description.
+     * Produces {@link Future} with {@link BidderCall} containing request and error description.
      */
-    private static <T> Future<HttpCall<T>> failResponse(Throwable exception, HttpRequest<T> httpRequest) {
+    private static <T> Future<BidderCall<T>> failResponse(Throwable exception, HttpRequest<T> httpRequest) {
         logger.warn("Error occurred while sending HTTP request to a bidder url: {0} with message: {1}",
                 httpRequest.getUri(), exception.getMessage());
         logger.debug("Error occurred while sending HTTP request to a bidder url: {0}",
@@ -221,17 +231,19 @@ public class HttpBidderRequester {
                         : BidderError.Type.generic;
 
         return Future.succeededFuture(
-                HttpCall.failure(httpRequest, BidderError.create(exception.getMessage(), errorType)));
+                BidderCall.failedHttp(httpRequest, BidderError.create(exception.getMessage(), errorType)));
     }
 
     /**
-     * Produces {@link Future} with {@link HttpCall} containing request, response and possible error description
+     * Produces {@link Future} with {@link BidderCall} containing request, response and possible error description
      * (if status code indicates an error).
      */
-    private static <T> Future<HttpCall<T>> processResponse(HttpClientResponse response, HttpRequest<T> httpRequest) {
+    private static <T> Future<BidderCall<T>> processResponse(HttpClientResponse response,
+                                                             HttpRequest<T> httpRequest) {
+
         final int statusCode = response.getStatusCode();
         final HttpResponse httpResponse = HttpResponse.of(statusCode, response.getHeaders(), response.getBody());
-        return Future.succeededFuture(HttpCall.success(httpRequest, httpResponse, errorOrNull(statusCode)));
+        return Future.succeededFuture(BidderCall.succeededHttp(httpRequest, httpResponse, errorOrNull(statusCode)));
     }
 
     /**
@@ -239,8 +251,8 @@ public class HttpBidderRequester {
      */
     private static BidderError errorOrNull(int statusCode) {
         if (statusCode != HttpResponseStatus.OK.code() && statusCode != HttpResponseStatus.NO_CONTENT.code()) {
-            return BidderError.create(String.format(
-                            "Unexpected status code: %d. Run with request.test = 1 for more info", statusCode),
+            return BidderError.create(
+                    "Unexpected status code: " + statusCode + ". Run with request.test = 1 for more info",
                     statusCode == HttpResponseStatus.BAD_REQUEST.code()
                             ? BidderError.Type.bad_input
                             : BidderError.Type.bad_server_response);
@@ -251,13 +263,16 @@ public class HttpBidderRequester {
     private <T> Void processHttpCall(Bidder<T> bidder,
                                      BidRequest bidRequest,
                                      ResultBuilder<T> seatBidBuilder,
-                                     HttpCall<T> httpCall) {
+                                     BidderCall<T> httpCall) {
 
         seatBidBuilder.addHttpCall(httpCall, makeBids(bidder, httpCall, bidRequest));
         return null;
     }
 
-    private static <T> Result<List<BidderBid>> makeBids(Bidder<T> bidder, HttpCall<T> httpCall, BidRequest bidRequest) {
+    private static <T> Result<List<BidderBid>> makeBids(Bidder<T> bidder,
+                                                        BidderCall<T> httpCall,
+                                                        BidRequest bidRequest) {
+
         return httpCall.getError() != null
                 ? null
                 : makeResult(bidder, httpCall, bidRequest);
@@ -267,7 +282,7 @@ public class HttpBidderRequester {
      * Returns result based on response status code and list of {@link BidderBid}s from bidder.
      */
     private static <T> Result<List<BidderBid>> makeResult(Bidder<T> bidder,
-                                                          HttpCall<T> httpCall,
+                                                          BidderCall<T> httpCall,
                                                           BidRequest bidRequest) {
 
         final int statusCode = httpCall.getResponse().getStatusCode();
@@ -286,13 +301,13 @@ public class HttpBidderRequester {
      * <p>
      * Note: this will safe making bids by bidders from JSON parsing error.
      */
-    private static <T> HttpCall<T> toHttpCallWithSafeResponseBody(HttpCall<T> httpCall) {
+    private static <T> BidderCall<T> toHttpCallWithSafeResponseBody(BidderCall<T> httpCall) {
         final HttpResponse response = httpCall.getResponse();
         final int statusCode = response.getStatusCode();
 
         if (statusCode == HttpResponseStatus.NO_CONTENT.code()) {
             final HttpResponse updatedHttpResponse = HttpResponse.of(statusCode, response.getHeaders(), "{}");
-            return HttpCall.success(httpCall.getRequest(), updatedHttpResponse, null);
+            return BidderCall.succeededHttp(httpCall.getRequest(), updatedHttpResponse, null);
         }
 
         return httpCall;
@@ -305,7 +320,7 @@ public class HttpBidderRequester {
         final BidderRequestCompletionTracker completionTracker;
         private final JacksonMapper mapper;
 
-        final Map<HttpRequest<T>, HttpCall<T>> httpCallsRecorded = new HashMap<>();
+        final Map<HttpRequest<T>, BidderCall<T>> bidderCallsRecorded = new HashMap<>();
         final List<BidderBid> bidsRecorded = new ArrayList<>();
         final List<BidderError> errorsRecorded = new ArrayList<>();
 
@@ -320,8 +335,8 @@ public class HttpBidderRequester {
             this.mapper = mapper;
         }
 
-        void addHttpCall(HttpCall<T> httpCall, Result<List<BidderBid>> bidsResult) {
-            httpCallsRecorded.put(httpCall.getRequest(), httpCall);
+        void addHttpCall(BidderCall<T> bidderCall, Result<List<BidderBid>> bidsResult) {
+            bidderCallsRecorded.put(bidderCall.getRequest(), bidderCall);
 
             final List<BidderBid> bids = bidsResult != null ? bidsResult.getValue() : null;
             if (bids != null) {
@@ -336,29 +351,30 @@ public class HttpBidderRequester {
         }
 
         BidderSeatBid toBidderSeatBid(boolean debugEnabled) {
-            final List<HttpCall<T>> httpCalls = new ArrayList<>(httpCallsRecorded.values());
+            final List<BidderCall<T>> httpCalls = new ArrayList<>(bidderCallsRecorded.values());
             httpRequests.stream()
-                    .filter(httpRequest -> !httpCallsRecorded.containsKey(httpRequest))
-                    .map(httpRequest -> HttpCall.success(httpRequest, null, null))
+                    .filter(httpRequest -> !bidderCallsRecorded.containsKey(httpRequest))
+                    .map(BidderCall::unfinishedHttp)
                     .forEach(httpCalls::add);
 
             // Capture debugging info from the requests
             final List<ExtHttpCall> extHttpCalls = debugEnabled
-                    ? httpCalls.stream().map(this::toExt).collect(Collectors.toList())
+                    ? httpCalls.stream().map(this::toExt).toList()
                     : Collections.emptyList();
 
-            final List<BidderError> errors = errors(previousErrors, httpCalls, errorsRecorded);
-
-            return BidderSeatBid.of(bidsRecorded, extHttpCalls, errors);
+            final List<BidderError> errors = combineErrors(previousErrors, httpCalls, errorsRecorded);
+            return BidderSeatBid.of(bidsRecorded, extHttpCalls, errors, Collections.emptyList());
         }
 
         /**
          * Constructs {@link ExtHttpCall} filled with HTTP call information.
          */
-        private ExtHttpCall toExt(HttpCall<T> httpCall) {
+        private ExtHttpCall toExt(BidderCall<T> httpCall) {
             final HttpRequest<T> request = httpCall.getRequest();
+            final BidderCallType callType = httpCall.getCallType();
             final ExtHttpCall.ExtHttpCallBuilder builder = ExtHttpCall.builder()
                     .uri(request.getUri())
+                    .calltype(callType != BidderCallType.HTTP ? callType : null)
                     .requestbody(mapper.encodeToString(request.getPayload()))
                     .requestheaders(HttpUtil.toDebugHeaders(request.getHeaders()));
 
@@ -374,16 +390,16 @@ public class HttpBidderRequester {
         /**
          * Assembles all errors for {@link BidderSeatBid} into the list of {@link BidderError}s.
          */
-        private static <R> List<BidderError> errors(List<BidderError> requestErrors, List<HttpCall<R>> calls,
-                                                    List<BidderError> responseErrors) {
+        private static <R> List<BidderError> combineErrors(List<BidderError> requestErrors,
+                                                           List<BidderCall<R>> calls,
+                                                           List<BidderError> responseErrors) {
 
-            final List<BidderError> bidderErrors = new ArrayList<>(requestErrors);
-            bidderErrors.addAll(
-                    Stream.concat(
-                                    responseErrors.stream(),
-                                    calls.stream().map(HttpCall::getError).filter(Objects::nonNull))
-                            .collect(Collectors.toList()));
-            return bidderErrors;
+            return Stream.of(
+                            requestErrors.stream(),
+                            responseErrors.stream(),
+                            calls.stream().map(BidderCall::getError).filter(Objects::nonNull))
+                    .flatMap(Function.identity())
+                    .toList();
         }
     }
 
