@@ -16,8 +16,8 @@ import org.apache.http.client.utils.URIBuilder;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.amx.model.AmxBidExt;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -34,7 +34,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class AmxBidder implements Bidder<BidRequest> {
 
@@ -42,10 +41,8 @@ public class AmxBidder implements Bidder<BidRequest> {
             new TypeReference<>() {
             };
 
-    private static final String ADAPTER_VERSION = "pbs1.1";
+    private static final String ADAPTER_VERSION = "pbs1.2";
     private static final String VERSION_PARAM = "v";
-    private static final String VAST_SEARCH_POINT = "</Impression>";
-    private static final String VAST_IMPRESSION_FORMAT = "<Impression><![CDATA[%s]]></Impression>";
 
     private final String endpointUrl;
     private final JacksonMapper mapper;
@@ -60,7 +57,7 @@ public class AmxBidder implements Bidder<BidRequest> {
         try {
             uriBuilder = new URIBuilder(HttpUtil.validateUrl(Objects.requireNonNull(url)));
         } catch (URISyntaxException e) {
-            throw new IllegalArgumentException(String.format("Invalid url: %s, error: %s", url, e.getMessage()));
+            throw new IllegalArgumentException("Invalid url: %s, error: %s".formatted(url, e.getMessage()));
         }
         return uriBuilder
                 .addParameter(VERSION_PARAM, ADAPTER_VERSION)
@@ -141,7 +138,7 @@ public class AmxBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             final List<BidderError> errors = new ArrayList<>();
@@ -166,7 +163,7 @@ public class AmxBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .map(bid -> createBidderBid(bid, bidResponse.getCur(), errors))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidderBid createBidderBid(Bid bid, String cur, List<BidderError> errors) {
@@ -178,17 +175,7 @@ public class AmxBidder implements Bidder<BidRequest> {
             return null;
         }
 
-        final BidType bidType = getMediaType(amxBidExt);
-
-        final Bid updatedBid;
-        try {
-            updatedBid = bidType == BidType.video ? updateVideoBid(bid, amxBidExt) : bid;
-        } catch (PreBidException e) {
-            errors.add(BidderError.badServerResponse(e.getMessage()));
-            return null;
-        }
-
-        return BidderBid.of(updatedBid, bidType, cur);
+        return BidderBid.of(bid, getBidType(amxBidExt), cur);
     }
 
     private AmxBidExt parseBidderExt(ObjectNode ext) {
@@ -203,53 +190,13 @@ public class AmxBidder implements Bidder<BidRequest> {
         }
     }
 
-    private static BidType getMediaType(AmxBidExt bidExt) {
-        return StringUtils.isNotBlank(bidExt.getStartDelay())
-                ? BidType.video
-                : BidType.banner;
-    }
-
-    private static Bid updateVideoBid(Bid bid, AmxBidExt bidExt) {
-        final String adm = bid.getAdm();
-        final String bidId = bid.getId();
-        validateAdm(adm, bidId);
-        return bid.toBuilder()
-                .nurl("")
-                .adm(updateAdm(bidExt, bid.getNurl(), adm, bidId))
-                .build();
-    }
-
-    private static void validateAdm(String adm, String bidId) {
-        if (StringUtils.isBlank(adm)) {
-            throw new PreBidException(String.format("Adm should not be blank in bidder: %s", bidId));
-        }
-
-        if (!adm.contains(VAST_SEARCH_POINT)) {
-            throw new PreBidException(String.format("Adm should contain vast search point in bidder: %s", bidId));
-        }
-    }
-
-    private static String updateAdm(AmxBidExt bidExt, String nurl, String adm, String bidId) {
-        final StringBuilder updatedAdm = new StringBuilder();
-        validateAdm(adm, bidId);
-
-        int lastInd = adm.lastIndexOf(VAST_SEARCH_POINT);
-
-        updatedAdm.append(adm, 0, lastInd + VAST_SEARCH_POINT.length());
-        addValueIfNotEmpty(nurl, updatedAdm);
-
-        for (String himp : bidExt.getHimp()) {
-            addValueIfNotEmpty(himp, updatedAdm);
-        }
-
-        return updatedAdm
-                .append(adm.substring(lastInd + VAST_SEARCH_POINT.length()))
-                .toString();
-    }
-
-    private static void addValueIfNotEmpty(String value, StringBuilder dest) {
-        if (StringUtils.isNotBlank(value)) {
-            dest.append(String.format(VAST_IMPRESSION_FORMAT, value));
+    private BidType getBidType(AmxBidExt amxBidExt) {
+        if (amxBidExt.getStartDelay() != null) {
+            return BidType.video;
+        } else if (amxBidExt.getCreativeType() != null && amxBidExt.getCreativeType() == 10) {
+            return BidType.xNative;
+        } else {
+            return BidType.banner;
         }
     }
 }
