@@ -13,8 +13,8 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -31,7 +31,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class NanointeractiveBidder implements Bidder<BidRequest> {
 
@@ -120,14 +119,16 @@ public class NanointeractiveBidder implements Bidder<BidRequest> {
         }
 
         if (bidRequest.getUser() != null && StringUtils.isNotBlank(bidRequest.getUser().getBuyeruid())) {
-            HttpUtil.addHeaderIfValueIsNotEmpty(headers, HttpUtil.COOKIE_HEADER, String.format("Nano=%s",
-                    bidRequest.getUser().getBuyeruid().trim()));
+            HttpUtil.addHeaderIfValueIsNotEmpty(
+                    headers,
+                    HttpUtil.COOKIE_HEADER,
+                    "Nano=" + bidRequest.getUser().getBuyeruid().trim());
         }
         return headers;
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.of(extractBids(bidResponse), Collections.emptyList());
@@ -150,6 +151,6 @@ public class NanointeractiveBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .filter(bid -> BidderUtil.isValidPrice(bid.getPrice()))
                 .map(bid -> BidderBid.of(bid, BidType.banner, bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
