@@ -1,5 +1,6 @@
 package org.prebid.server.deals.lineitem;
 
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
 import org.apache.commons.collections4.CollectionUtils;
@@ -17,7 +18,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 public class LineItem {
 
@@ -189,6 +189,10 @@ public class LineItem {
         return metaData.getSizes();
     }
 
+    public ObjectNode getTargeting() {
+        return metaData.getTargeting();
+    }
+
     public TargetingDefinition getTargetingDefinition() {
         return targetingDefinition;
     }
@@ -200,7 +204,7 @@ public class LineItem {
     private static List<String> extractFcapIds(LineItemMetaData metaData) {
         return CollectionUtils.emptyIfNull(metaData.getFrequencyCaps()).stream()
                 .map(FrequencyCap::getFcapId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void updateOrAdvanceActivePlan(ZonedDateTime now, boolean isPlannerResponsive, DeliveryPlan currentPlan) {
