@@ -45,34 +45,34 @@ public class EventUtil {
     public static void validateType(RoutingContext routingContext) {
         final String type = routingContext.request().params().get(TYPE_PARAMETER);
         if (ObjectUtils.notEqual(type, IMP_TYPE) && ObjectUtils.notEqual(type, WIN_TYPE)) {
-            throw new IllegalArgumentException(String.format(
-                    "Type '%s' is required query parameter. Possible values are %s and %s, but was %s",
-                    TYPE_PARAMETER, WIN_TYPE, IMP_TYPE, type));
+            throw new IllegalArgumentException(
+                    "Type '%s' is required query parameter. Possible values are %s and %s, but was %s"
+                            .formatted(TYPE_PARAMETER, WIN_TYPE, IMP_TYPE, type));
         }
     }
 
     public static void validateAccountId(RoutingContext routingContext) {
         final String accountId = routingContext.request().params().get(ACCOUNT_ID_PARAMETER);
         if (StringUtils.isBlank(accountId)) {
-            throw new IllegalArgumentException(String.format(
-                    "Account '%s' is required query parameter and can't be empty", ACCOUNT_ID_PARAMETER));
+            throw new IllegalArgumentException("Account '%s' is required query parameter and can't be empty"
+                    .formatted(ACCOUNT_ID_PARAMETER));
         }
     }
 
     public static void validateBidId(RoutingContext routingContext) {
         final String bidId = routingContext.request().params().get(BID_ID_PARAMETER);
         if (StringUtils.isBlank(bidId)) {
-            throw new IllegalArgumentException(String.format(
-                    "BidId '%s' is required query parameter and can't be empty", BID_ID_PARAMETER));
+            throw new IllegalArgumentException(
+                    "BidId '%s' is required query parameter and can't be empty".formatted(BID_ID_PARAMETER));
         }
     }
 
     public static void validateFormat(RoutingContext routingContext) {
         final String format = routingContext.request().params().get(FORMAT_PARAMETER);
         if (StringUtils.isNotEmpty(format) && !format.equals(BLANK_FORMAT) && !format.equals(IMAGE_FORMAT)) {
-            throw new IllegalArgumentException(String.format(
-                    "Format '%s' query parameter is invalid. Possible values are %s and %s, but was %s",
-                    FORMAT_PARAMETER, BLANK_FORMAT, IMAGE_FORMAT, format));
+            throw new IllegalArgumentException(
+                    "Format '%s' query parameter is invalid. Possible values are %s and %s, but was %s"
+                            .formatted(FORMAT_PARAMETER, BLANK_FORMAT, IMAGE_FORMAT, format));
         }
     }
 
@@ -80,9 +80,9 @@ public class EventUtil {
         final String analytics = routingContext.request().params().get(ANALYTICS_PARAMETER);
         if (StringUtils.isNotEmpty(analytics) && !analytics.equals(ENABLED_ANALYTICS)
                 && !analytics.equals(DISABLED_ANALYTICS)) {
-            throw new IllegalArgumentException(String.format(
-                    "Analytics '%s' query parameter is invalid. Possible values are %s and %s, but was %s",
-                    ANALYTICS_PARAMETER, ENABLED_ANALYTICS, DISABLED_ANALYTICS, analytics));
+            throw new IllegalArgumentException(
+                    "Analytics '%s' query parameter is invalid. Possible values are %s and %s, but was %s"
+                            .formatted(ANALYTICS_PARAMETER, ENABLED_ANALYTICS, DISABLED_ANALYTICS, analytics));
         }
     }
 
@@ -92,8 +92,8 @@ public class EventUtil {
             try {
                 Long.parseLong(timestamp);
             } catch (NumberFormatException e) {
-                throw new IllegalArgumentException(String.format(
-                        "Timestamp '%s' query parameter is not valid number: %s", TIMESTAMP_PARAMETER, timestamp));
+                throw new IllegalArgumentException("Timestamp '%s' query parameter is not valid number: %s"
+                        .formatted(TIMESTAMP_PARAMETER, timestamp));
             }
         }
     }
@@ -102,14 +102,13 @@ public class EventUtil {
         final String value = routingContext.request().getParam(INTEGRATION_PARAMETER);
         if (StringUtils.isNotEmpty(value)) {
             if (value.length() > INTEGRATION_PARAMETER_MAX_LENGTH) {
-                throw new IllegalArgumentException(String.format(
-                        "Integration '%s' query parameter is longer %s symbols: %s",
-                        INTEGRATION_PARAMETER, INTEGRATION_PARAMETER_MAX_LENGTH, value));
+                throw new IllegalArgumentException("Integration '%s' query parameter is longer %s symbols: %s"
+                        .formatted(INTEGRATION_PARAMETER, INTEGRATION_PARAMETER_MAX_LENGTH, value));
             }
             for (int i = 0; i < value.length(); i++) {
                 if (!Character.isLetterOrDigit(value.charAt(i)) && value.charAt(i) != '-' && value.charAt(i) != '_') {
-                    throw new IllegalArgumentException(String.format(
-                            "Integration '%s' query parameter is not valid: %s", INTEGRATION_PARAMETER, value));
+                    throw new IllegalArgumentException("Integration '%s' query parameter is not valid: %s"
+                            .formatted(INTEGRATION_PARAMETER, value));
                 }
             }
         }
@@ -148,8 +147,7 @@ public class EventUtil {
     }
 
     static String toUrl(String externalUrl, EventRequest eventRequest) {
-        final String urlWithRequiredParameters = String.format(
-                TEMPLATE_URL,
+        final String urlWithRequiredParameters = TEMPLATE_URL.formatted(
                 externalUrl,
                 eventRequest.getType(),
                 eventRequest.getBidId(),
