@@ -48,7 +48,6 @@ import javax.validation.constraints.NotNull;
 import java.time.Clock;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @UtilityClass
@@ -135,21 +134,23 @@ public class SettingsConfiguration {
 
         @Bean
         JDBCClient vertxJdbcClient(Vertx vertx, StoredRequestsDatabaseProperties storedRequestsDatabaseProperties) {
-            final String jdbcUrl = String.format("%s//%s:%d/%s?%s",
+            final String jdbcUrl = "%s//%s:%d/%s?%s".formatted(
                     storedRequestsDatabaseProperties.getType().jdbcUrlPrefix,
                     storedRequestsDatabaseProperties.getHost(),
                     storedRequestsDatabaseProperties.getPort(),
                     storedRequestsDatabaseProperties.getDbname(),
-                    storedRequestsDatabaseProperties.getType().jdbcUrlSuffix);
+                    storedRequestsDatabaseProperties.getType().jdbcUrlSuffix
+                            + storedRequestsDatabaseProperties.getProviderClass().jdbcUrlSuffix);
 
             return JDBCClient.createShared(vertx, new JsonObject()
-                    .put("url", jdbcUrl)
+                    .put(storedRequestsDatabaseProperties.getProviderClass().url, jdbcUrl)
                     .put("user", storedRequestsDatabaseProperties.getUser())
                     .put("password", storedRequestsDatabaseProperties.getPassword())
                     .put("driver_class", storedRequestsDatabaseProperties.getType().jdbcDriver)
                     .put("initial_pool_size", storedRequestsDatabaseProperties.getPoolSize())
                     .put("min_pool_size", storedRequestsDatabaseProperties.getPoolSize())
-                    .put("max_pool_size", storedRequestsDatabaseProperties.getPoolSize()));
+                    .put("max_pool_size", storedRequestsDatabaseProperties.getPoolSize())
+                    .put("provider_class", storedRequestsDatabaseProperties.getProviderClass().jdbcCP));
         }
 
         @Component
@@ -175,6 +176,8 @@ public class SettingsConfiguration {
             private String user;
             @NotBlank
             private String password;
+            @NotNull
+            private DbPoolType providerClass;
         }
 
         @AllArgsConstructor
@@ -184,6 +187,16 @@ public class SettingsConfiguration {
 
             private final String jdbcDriver;
             private final String jdbcUrlPrefix;
+            private final String jdbcUrlSuffix;
+        }
+
+        @AllArgsConstructor
+        private enum DbPoolType {
+            hikari("io.vertx.ext.jdbc.spi.impl.HikariCPDataSourceProvider", "jdbcUrl", "&allowPublicKeyRetrieval=true"),
+            c3p0("io.vertx.ext.jdbc.spi.impl.C3P0DataSourceProvider", "url", "");
+
+            private final String jdbcCP;
+            private final String url;
             private final String jdbcUrlSuffix;
         }
     }
@@ -329,7 +342,7 @@ public class SettingsConfiguration {
                                     jdbcApplicationSettings,
                                     httpApplicationSettings)
                             .filter(Objects::nonNull)
-                            .collect(Collectors.toList());
+                            .toList();
 
             return new CompositeApplicationSettings(applicationSettingsList);
         }
@@ -340,15 +353,19 @@ public class SettingsConfiguration {
 
         @Bean
         EnrichingApplicationSettings enrichingApplicationSettings(
+                @Value("${settings.enforce-valid-account}") boolean enforceValidAccount,
                 @Value("${settings.default-account-config:#{null}}") String defaultAccountConfig,
                 CompositeApplicationSettings compositeApplicationSettings,
                 PriceFloorsConfigResolver priceFloorsConfigResolver,
-                JsonMerger jsonMerger) {
+                JsonMerger jsonMerger,
+                JacksonMapper jacksonMapper) {
 
-            return new EnrichingApplicationSettings(defaultAccountConfig,
+            return new EnrichingApplicationSettings(enforceValidAccount,
+                    defaultAccountConfig,
                     compositeApplicationSettings,
                     priceFloorsConfigResolver,
-                    jsonMerger);
+                    jsonMerger,
+                    jacksonMapper);
         }
     }
 
