@@ -9,6 +9,7 @@ import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.DataObject;
 import com.iab.openrtb.request.Device;
+import com.iab.openrtb.request.Eid;
 import com.iab.openrtb.request.EventTracker;
 import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.ImageObject;
@@ -20,6 +21,7 @@ import com.iab.openrtb.request.Regs;
 import com.iab.openrtb.request.Request;
 import com.iab.openrtb.request.Site;
 import com.iab.openrtb.request.TitleObject;
+import com.iab.openrtb.request.Uid;
 import com.iab.openrtb.request.User;
 import com.iab.openrtb.request.Video;
 import com.iab.openrtb.request.VideoObject;
@@ -36,7 +38,6 @@ import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.BidderCatalog;
 import org.prebid.server.json.JacksonMapper;
-import org.prebid.server.proto.openrtb.ext.request.ImpMediaType;
 import org.prebid.server.proto.openrtb.ext.request.ExtDevice;
 import org.prebid.server.proto.openrtb.ext.request.ExtDeviceInt;
 import org.prebid.server.proto.openrtb.ext.request.ExtDevicePrebid;
@@ -44,7 +45,6 @@ import org.prebid.server.proto.openrtb.ext.request.ExtGranularityRange;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtMediaTypePriceGranularity;
 import org.prebid.server.proto.openrtb.ext.request.ExtPriceGranularity;
-import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestBidAdjustmentFactors;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
@@ -56,9 +56,8 @@ import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.request.ExtStoredAuctionResponse;
 import org.prebid.server.proto.openrtb.ext.request.ExtStoredBidResponse;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEid;
-import org.prebid.server.proto.openrtb.ext.request.ExtUserEidUid;
 import org.prebid.server.proto.openrtb.ext.request.ExtUserPrebid;
+import org.prebid.server.proto.openrtb.ext.request.ImpMediaType;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.util.StreamUtil;
 import org.prebid.server.validation.model.ValidationResult;
@@ -122,7 +121,7 @@ public class RequestValidator {
             }
 
             if (bidRequest.getTmax() != null && bidRequest.getTmax() < 0L) {
-                throw new ValidationException("request.tmax must be nonnegative. Got %s", bidRequest.getTmax());
+                throw new ValidationException("request.tmax must be nonnegative. Got " + bidRequest.getTmax());
             }
 
             validateCur(bidRequest.getCur());
@@ -140,6 +139,7 @@ public class RequestValidator {
                 }
                 aliases = ObjectUtils.defaultIfNull(extRequestPrebid.getAliases(), Collections.emptyMap());
                 validateAliases(aliases);
+                validateAliasesGvlIds(extRequestPrebid, aliases);
                 validateBidAdjustmentFactors(extRequestPrebid.getBidadjustmentfactors(), aliases);
                 validateExtBidPrebidData(extRequestPrebid.getData(), aliases);
                 validateSchains(extRequestPrebid.getSchains());
@@ -155,9 +155,8 @@ public class RequestValidator {
             for (int i = 0; i < imps.size(); i++) {
                 final String impId = imps.get(i).getId();
                 if (uniqueImps.get(impId) != null) {
-                    errors.add(String.format(
-                            "request.imp[%d].id and request.imp[%d].id are both \"%s\". Imp IDs must be unique.",
-                            uniqueImps.get(impId), i, impId));
+                    errors.add("request.imp[%d].id and request.imp[%d].id are both \"%s\". Imp IDs must be unique."
+                            .formatted(uniqueImps.get(impId), i, impId));
                 }
 
                 uniqueImps.put(impId, i);
@@ -196,6 +195,30 @@ public class RequestValidator {
         if (CollectionUtils.isEmpty(currencies)) {
             throw new ValidationException(
                     "currency was not defined either in request.cur or in configuration field adServerCurrency");
+        }
+    }
+
+    private void validateAliasesGvlIds(ExtRequestPrebid extRequestPrebid,
+                                       Map<String, String> aliases) throws ValidationException {
+
+        final Map<String, Integer> aliasGvlIds = MapUtils.emptyIfNull(extRequestPrebid.getAliasgvlids());
+
+        for (Map.Entry<String, Integer> aliasToGvlId : aliasGvlIds.entrySet()) {
+
+            if (!aliases.containsKey(aliasToGvlId.getKey())) {
+                throw new ValidationException(
+                        "request.ext.prebid.aliasgvlids. vendorId %s refers to unknown bidder alias: %s",
+                        aliasToGvlId.getValue(),
+                        aliasToGvlId.getKey());
+            }
+
+            if (aliasToGvlId.getValue() < 1) {
+                throw new ValidationException("""
+                        request.ext.prebid.aliasgvlids. Invalid vendorId %s for alias: %s. \
+                        Choose a different vendorId, or remove this entry.""",
+                        aliasToGvlId.getValue(),
+                        aliasToGvlId.getKey());
+            }
         }
     }
 
@@ -326,8 +349,8 @@ public class RequestValidator {
 
     private void validateDuplicatedSources(Set<String> uniqueEidsSources, String eidSource) throws ValidationException {
         if (uniqueEidsSources.contains(eidSource)) {
-            throw new ValidationException(String.format(
-                    "Duplicate source %s in request.ext.prebid.data.eidpermissions[]", eidSource));
+            throw new ValidationException("Duplicate source %s in request.ext.prebid.data.eidpermissions[]"
+                    .formatted(eidSource));
         }
         uniqueEidsSources.add(eidSource);
     }
@@ -384,14 +407,14 @@ public class RequestValidator {
         try {
             extPriceGranularity = mapper.mapper().treeToValue(priceGranularity, ExtPriceGranularity.class);
         } catch (JsonProcessingException e) {
-            throw new ValidationException(String.format("Error while parsing request.ext.prebid.targeting.%s",
-                    type == null ? "pricegranularity" : "mediatypepricegranularity." + type));
+            throw new ValidationException("Error while parsing request.ext.prebid.targeting.%s"
+                    .formatted(type == null ? "pricegranularity" : "mediatypepricegranularity." + type));
         }
 
         final Integer precision = extPriceGranularity.getPrecision();
         if (precision != null && precision < 0) {
-            throw new ValidationException(String.format("%srice granularity error: precision must be non-negative",
-                    type == null ? "P" : StringUtils.capitalize(type.name()) + " p"));
+            throw new ValidationException("%srice granularity error: precision must be non-negative"
+                    .formatted(type == null ? "P" : StringUtils.capitalize(type.name()) + " p"));
         }
         validateGranularityRanges(extPriceGranularity.getRanges());
     }
@@ -476,16 +499,17 @@ public class RequestValidator {
             final String alias = aliasToBidder.getKey();
             final String coreBidder = aliasToBidder.getValue();
             if (!bidderCatalog.isValidName(coreBidder)) {
-                throw new ValidationException(String.format(
-                        "request.ext.prebid.aliases.%s refers to unknown bidder: %s", alias, coreBidder));
+                throw new ValidationException(
+                        "request.ext.prebid.aliases.%s refers to unknown bidder: %s".formatted(alias, coreBidder));
             }
             if (!bidderCatalog.isActive(coreBidder)) {
-                throw new ValidationException(String.format(
-                        "request.ext.prebid.aliases.%s refers to disabled bidder: %s", alias, coreBidder));
+                throw new ValidationException(
+                        "request.ext.prebid.aliases.%s refers to disabled bidder: %s".formatted(alias, coreBidder));
             }
             if (alias.equals(coreBidder)) {
-                throw new ValidationException(String.format("request.ext.prebid.aliases.%s defines a no-op alias. "
-                        + "Choose a different alias, or remove this entry", alias));
+                throw new ValidationException("""
+                        request.ext.prebid.aliases.%s defines a no-op alias. \
+                        Choose a different alias, or remove this entry""".formatted(alias));
             }
         }
     }
@@ -532,9 +556,47 @@ public class RequestValidator {
     }
 
     private void validateUser(User user, Map<String, String> aliases) throws ValidationException {
-        if (user != null && user.getExt() != null) {
-            final ExtUser extUser = user.getExt();
+        if (user != null) {
+            validateUserExt(user.getExt(), aliases);
 
+            final List<Eid> eids = user.getEids();
+            if (eids != null) {
+                if (eids.isEmpty()) {
+                    throw new ValidationException(
+                            "request.user.eids must contain at least one element or be undefined");
+                }
+                for (int index = 0; index < eids.size(); index++) {
+                    final Eid eid = eids.get(index);
+                    if (StringUtils.isBlank(eid.getSource())) {
+                        throw new ValidationException(
+                                "request.user.eids[%d] missing required field: \"source\"", index);
+                    }
+                    final List<Uid> eidUids = eid.getUids();
+                    if (CollectionUtils.isEmpty(eidUids)) {
+                        throw new ValidationException(
+                                "request.user.eids[%d].uids must contain at least one element", index);
+                    }
+                    for (int uidsIndex = 0; uidsIndex < eidUids.size(); uidsIndex++) {
+                        final Uid uid = eidUids.get(uidsIndex);
+                        if (StringUtils.isBlank(uid.getId())) {
+                            throw new ValidationException(
+                                    "request.user.eids[%d].uids[%d] missing required field: \"id\"", index,
+                                    uidsIndex);
+                        }
+                    }
+                }
+                final Set<String> uniqueSources = eids.stream()
+                        .map(Eid::getSource)
+                        .collect(Collectors.toSet());
+                if (eids.size() != uniqueSources.size()) {
+                    throw new ValidationException("request.user.eids must contain unique sources");
+                }
+            }
+        }
+    }
+
+    private void validateUserExt(ExtUser extUser, Map<String, String> aliases) throws ValidationException {
+        if (extUser != null) {
             final ExtUserPrebid prebid = extUser.getPrebid();
             if (prebid != null) {
                 final Map<String, String> buyerUids = prebid.getBuyeruids();
@@ -551,58 +613,15 @@ public class RequestValidator {
                     }
                 }
             }
-
-            final List<ExtUserEid> eids = extUser.getEids();
-            if (eids != null) {
-                if (eids.isEmpty()) {
-                    throw new ValidationException(
-                            "request.user.ext.eids must contain at least one element or be undefined");
-                }
-                for (int index = 0; index < eids.size(); index++) {
-                    final ExtUserEid eid = eids.get(index);
-                    if (StringUtils.isBlank(eid.getSource())) {
-                        throw new ValidationException(
-                                "request.user.ext.eids[%d] missing required field: \"source\"", index);
-                    }
-                    final String eidId = eid.getId();
-                    final List<ExtUserEidUid> eidUids = eid.getUids();
-                    if (eidId == null && eidUids == null) {
-                        throw new ValidationException(
-                                "request.user.ext.eids[%d] must contain either \"id\" or \"uids\" field", index);
-                    }
-                    if (eidId == null) {
-                        if (eidUids.isEmpty()) {
-                            throw new ValidationException(
-                                    "request.user.ext.eids[%d].uids must contain at least one element "
-                                            + "or be undefined", index);
-                        }
-                        for (int uidsIndex = 0; uidsIndex < eidUids.size(); uidsIndex++) {
-                            final ExtUserEidUid uid = eidUids.get(uidsIndex);
-                            if (StringUtils.isBlank(uid.getId())) {
-                                throw new ValidationException(
-                                        "request.user.ext.eids[%d].uids[%d] missing required field: \"id\"", index,
-                                        uidsIndex);
-                            }
-                        }
-                    }
-                }
-                final Set<String> uniqueSources = eids.stream()
-                        .map(ExtUserEid::getSource)
-                        .collect(Collectors.toSet());
-                if (eids.size() != uniqueSources.size()) {
-                    throw new ValidationException("request.user.ext.eids must contain unique sources");
-                }
-            }
         }
     }
 
     /**
-     * Validates {@link Regs}. Throws {@link ValidationException} in case if {@link ExtRegs} is present in
-     * bidrequest.regs.ext and its gdpr value has different value to 0 or 1.
+     * Validates {@link Regs}. Throws {@link ValidationException} in case if
+     * its gdpr value has different value to 0 or 1.
      */
     private void validateRegs(Regs regs) throws ValidationException {
-        final ExtRegs extRegs = regs != null ? regs.getExt() : null;
-        final Integer gdpr = extRegs != null ? extRegs.getGdpr() : null;
+        final Integer gdpr = regs != null ? regs.getGdpr() : null;
         if (gdpr != null && gdpr != 0 && gdpr != 1) {
             throw new ValidationException("request.regs.ext.gdpr must be either 0 or 1");
         }
@@ -890,7 +909,7 @@ public class RequestValidator {
     }
 
     private static String documentationOnPage(int page) {
-        return String.format("%s#page=%d", DOCUMENTATION, page);
+        return "%s#page=%d".formatted(DOCUMENTATION, page);
     }
 
     private String toEncodedRequest(Request nativeRequest, List<Asset> updatedAssets) {
@@ -954,16 +973,13 @@ public class RequestValidator {
                 validateImpBidderExtName(impIndex, bidderExtension, aliases.getOrDefault(bidder, bidder));
             } catch (ValidationException ex) {
                 bidderExtensions.remove();
-                warnings.add(
-                        String.format(
-                                "WARNING: request.imp[%d].ext.prebid.bidder.%s was dropped with a reason: %s",
-                                impIndex, bidder, ex.getMessage()));
+                warnings.add("WARNING: request.imp[%d].ext.prebid.bidder.%s was dropped with a reason: %s"
+                        .formatted(impIndex, bidder, ex.getMessage()));
             }
         }
 
         if (extPrebidBidder.size() == 0) {
-            warnings.add(
-                    String.format("WARNING: request.imp[%d].ext must contain at least one valid bidder", impIndex));
+            warnings.add("WARNING: request.imp[%d].ext must contain at least one valid bidder".formatted(impIndex));
         }
     }
 
@@ -980,8 +996,9 @@ public class RequestValidator {
         if (CollectionUtils.isNotEmpty(storedBidResponses)) {
             final ObjectNode bidderNode = extPrebid.getBidder();
             if (bidderNode == null || bidderNode.isEmpty()) {
-                throw new ValidationException(String.format(
-                        "request.imp[%d].ext.prebid.bidder should be defined for storedbidresponse", impIndex));
+                throw new ValidationException(
+                        "request.imp[%d].ext.prebid.bidder should be defined for storedbidresponse"
+                                .formatted(impIndex));
             }
 
             for (ExtStoredBidResponse storedBidResponse : storedBidResponses) {
@@ -995,28 +1012,28 @@ public class RequestValidator {
         final String bidder = extStoredBidResponse.getBidder();
         final String id = extStoredBidResponse.getId();
         if (StringUtils.isEmpty(bidder)) {
-            throw new ValidationException(String.format(
-                    "request.imp[%d].ext.prebid.storedbidresponse.bidder was not defined", impIndex));
+            throw new ValidationException(
+                    "request.imp[%d].ext.prebid.storedbidresponse.bidder was not defined".formatted(impIndex));
         }
 
         if (StringUtils.isEmpty(id)) {
-            throw new ValidationException(String.format(
-                    "Id was not defined for request.imp[%d].ext.prebid.storedbidresponse.id", impIndex));
+            throw new ValidationException(
+                    "Id was not defined for request.imp[%d].ext.prebid.storedbidresponse.id".formatted(impIndex));
         }
 
         final String resolvedBidder = aliases.getOrDefault(bidder, bidder);
 
         if (!bidderCatalog.isValidName(resolvedBidder)) {
-            throw new ValidationException(String.format(
-                    "request.imp[%d].ext.prebid.storedbidresponse.bidder is not valid bidder", impIndex));
+            throw new ValidationException(
+                    "request.imp[%d].ext.prebid.storedbidresponse.bidder is not valid bidder".formatted(impIndex));
         }
 
         final boolean noCorrespondentBidderParameters = StreamUtil.asStream(bidderNode.fieldNames())
                 .noneMatch(impBidder -> impBidder.equals(resolvedBidder) || impBidder.equals(bidder));
         if (noCorrespondentBidderParameters) {
-            throw new ValidationException(String.format(
-                    "request.imp[%d].ext.prebid.storedbidresponse.bidder does not have correspondent bidder parameters",
-                    impIndex));
+            throw new ValidationException(
+                    "request.imp[%d].ext.prebid.storedbidresponse.bidder does not have correspondent bidder parameters"
+                            .formatted(impIndex));
         }
     }
 
@@ -1024,8 +1041,8 @@ public class RequestValidator {
         try {
             return mapper.mapper().treeToValue(extImpPrebid, ExtImpPrebid.class);
         } catch (JsonProcessingException e) {
-            throw new ValidationException(String.format(
-                    " bidRequest.imp[%d].ext.prebid: %s has invalid format", impIndex, e.getMessage()));
+            throw new ValidationException(" bidRequest.imp[%d].ext.prebid: %s has invalid format"
+                    .formatted(impIndex, e.getMessage()));
         }
     }
 
@@ -1135,11 +1152,14 @@ public class RequestValidator {
 
     private void validateMetrics(List<Metric> metrics, int impIndex) throws ValidationException {
         for (int i = 0; i < metrics.size(); i++) {
-            if (metrics.get(i).getType() == null || metrics.get(i).getType().isEmpty()) {
+            final Metric metric = metrics.get(i);
+
+            if (StringUtils.isEmpty(metric.getType())) {
                 throw new ValidationException("Missing request.imp[%d].metric[%d].type", impIndex, i);
             }
 
-            if (metrics.get(i).getValue() < 0.0 || metrics.get(i).getValue() > 1.0) {
+            final Float value = metric.getValue();
+            if (value == null || value < 0.0 || value > 1.0) {
                 throw new ValidationException("request.imp[%d].metric[%d].value must be in the range [0.0, 1.0]",
                         impIndex, i);
             }
