@@ -13,15 +13,14 @@ import org.junit.Before;
 import org.junit.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
@@ -68,7 +67,7 @@ public class SaLunamediaBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorIfResponseBodyCouldNotBeParsed() {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null, "invalid");
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null, "invalid");
 
         // when
         final Result<List<BidderBid>> result = saLunamediaBidder.makeBids(httpCall, null);
@@ -85,7 +84,7 @@ public class SaLunamediaBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorIfBidResponseIsNull() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null, mapper.writeValueAsString(null));
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null, mapper.writeValueAsString(null));
 
         // when
         final Result<List<BidderBid>> result = saLunamediaBidder.makeBids(httpCall, null);
@@ -98,7 +97,7 @@ public class SaLunamediaBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorIfBidResponseSeatBidIsNull() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null,
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null,
                 mapper.writeValueAsString(BidResponse.builder().build()));
 
         // when
@@ -112,7 +111,7 @@ public class SaLunamediaBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorIfBidResponseFirstSeatBidHasEmptyBid() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(BidRequest.builder()
+        final BidderCall<BidRequest> httpCall = givenHttpCall(BidRequest.builder()
                         .imp(singletonList(Imp.builder().build()))
                         .build(),
                 mapper.writeValueAsString(BidResponse.builder().seatbid(singletonList(null)).build()));
@@ -129,7 +128,7 @@ public class SaLunamediaBidderTest extends VertxTest {
     public void makeBidsShouldReturnErrorIfBidResponseFirstBidOfFirstSeatBidHasEmptyExt()
             throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(BidRequest.builder()
+        final BidderCall<BidRequest> httpCall = givenHttpCall(BidRequest.builder()
                         .imp(singletonList(Imp.builder().build()))
                         .build(),
                 mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
@@ -145,7 +144,7 @@ public class SaLunamediaBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorIfBidResponseFirstBidHasInvalidMediaType() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
                 BidRequest.builder()
                         .imp(singletonList(Imp.builder().build()))
                         .build(),
@@ -169,7 +168,7 @@ public class SaLunamediaBidderTest extends VertxTest {
         // given
         final ObjectNode mediaTypeObjectNode = jacksonMapper.mapper()
                 .createObjectNode().put("mediaType", "native");
-        final HttpCall<BidRequest> httpCall = givenHttpCall(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
                 BidRequest.builder()
                         .imp(singletonList(Imp.builder().build()))
                         .build(),
@@ -191,7 +190,7 @@ public class SaLunamediaBidderTest extends VertxTest {
         // given
         final ObjectNode mediaTypeObjectNode = jacksonMapper.mapper()
                 .createObjectNode().put("mediaType", "banner");
-        final HttpCall<BidRequest> httpCall = givenHttpCall(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
                 BidRequest.builder()
                         .imp(singletonList(Imp.builder().build()))
                         .build(),
@@ -213,7 +212,7 @@ public class SaLunamediaBidderTest extends VertxTest {
         // given
         final ObjectNode mediaTypeObjectNode = jacksonMapper.mapper()
                 .createObjectNode().put("mediaType", "video");
-        final HttpCall<BidRequest> httpCall = givenHttpCall(
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
                 BidRequest.builder()
                         .imp(singletonList(Imp.builder().build()))
                         .build(),
@@ -240,14 +239,14 @@ public class SaLunamediaBidderTest extends VertxTest {
     private static BidResponse givenBidResponses(List<Function<Bid.BidBuilder, Bid.BidBuilder>> bidCustomizers) {
         return BidResponse.builder()
                 .seatbid(bidCustomizers.stream().map(customizer -> SeatBid.builder()
-                        .bid(singletonList(customizer.apply(Bid.builder()).build()))
-                        .build())
-                        .collect(Collectors.toList()))
+                                .bid(singletonList(customizer.apply(Bid.builder()).build()))
+                                .build())
+                        .toList())
                 .build();
     }
 
-    private static HttpCall<BidRequest> givenHttpCall(BidRequest bidRequest, String body) {
-        return HttpCall.success(
+    private static BidderCall<BidRequest> givenHttpCall(BidRequest bidRequest, String body) {
+        return BidderCall.succeededHttp(
                 HttpRequest.<BidRequest>builder().payload(bidRequest).build(),
                 HttpResponse.of(200, null, body),
                 null);
